# pibuilder

./: CLAUDE.md  CLAUDE_2.md  README.md  claudeup.sh  pyproject.toml
docs/: CONVERSATION_DIGEST.md  README.md  data-flow-architecture.md  dem-processing-pipeline.md  discharge-calculation-methods.md  engineering-principles.md  engineering-task-breakdown.md  epc-hydrology-workflow.md  geospatial-processing-architecture.md  hfl-calculation-methods.md  hydraulics-engine.md  hydrology-engine.md  mvp-roadmap.md  rainfall-data-pipeline.md  rainfall-engine-bugs.md  rainfall-frequency-analysis.md  repo-structure.md  sme-extraction-checklist.md  sme-knowledge-extraction.md  sme-spec-rainfall.md  system-architecture.md  test-output.txt  venture-strategy.md  watershed-algorithm-spec.md
docs/ENGINES/: gis-engine.md  rainfall-engine.md
docs/raw/: deep-research-report.md  raw.md
docs/ricalcs/: Indargarh daily rainfall from 1990-2021.xlsx  MPSB Rainfall Analysis_China Region.xlsx
scripts/: extract_fixtures.py  md_to_pdf.py  rainfall_query.py
src/pibuilder/: __init__.py
src/pibuilder/data/: etl.py  loaders.py
src/pibuilder/gis/: basin.py  watershed.py
src/pibuilder/hydraulics/: hfl.py
src/pibuilder/hydrology/: discharge.py  runoff.py
src/pibuilder/rainfall/: frequency.py  intensity.py
tests/: conftest.py  test_rainfall_gumbel.py  test_rainfall_lp3.py  test_rainfall_selection.py
tests/fixtures/: indargarh_daily_max.json  indargarh_ground_truth.json  mpsb_grid_data.json  mpsb_ground_truth.json
