[project]
name = "pi-builder"
version = "0.1.0"
description = "EPC hydrology intelligence platform"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "pandas>=2.1",
    "openpyxl>=3.1",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "pydantic>=2.5",
    "sqlalchemy>=2.0",
    "geoalchemy2>=0.14",
    "psycopg2-binary>=2.9",
    "geopandas>=0.14",
    "shapely>=2.0",
    "rasterio>=1.3",
    "pyproj>=3.6",
    "whitebox>=2.3",
    "celery>=5.3",
    "redis>=5.0",
    "jinja2>=3.1",
    "weasyprint>=60.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.hatch.build.targets.wheel]
packages = ["src/pibuilder"]
